fixed array input

--- a/Project3/Makefile
+++ b/Project3/Makefile
@@ -1,7 +1,7 @@
 TARGET = main
 LIBS = -lm #Math Library, just a placeholder
 HEADERS = image.h
-SRCS = main.cpp fft.cpp image.cpp ReadImage.cpp WriteImage.cpp ReadImageHeader.cpp
+SRCS = main.cpp image.cpp ReadImage.cpp WriteImage.cpp ReadImageHeader.cpp
 OBJECTS := $(patsubst %.cpp,%.o,$(SRCS))
 CXX = g++
 CXX_FLAGS = -Wall -std=c++11 #C++11 just for reference, not necessary
